# my-blog

./: .gitignore  build_database.py  datasette-blog-tutorial.md  pyproject.toml
.github/workflows/: deploy.yml
daily/: 2025-01-15-my-first-post.md  2025-01-16-hello-world.md  2026-03-04-datasette-blog-tutorial-uv.md  2026-03-04-testing-tutorial
templates/: index.html
templates/pages/: home.html
templates/pages/post/: {slug}.html
