[project]
name = "my-blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasette>=0.65.2",
    "datasette-publish-fly>=1.3.1",
    "datasette-template-sql>=1.0.2",
    "markdown>=3.10.2",
    "sqlite-utils>=3.39",
]
